fix filters on mobile

--- a/_sass/publications_list.scss
+++ b/_sass/publications_list.scss
@@ -1,3 +1,25 @@
+.publications__filter-toggle {
+    display: none;
+    width: 100%;
+    padding: 0.5rem 0.75rem;
+    font-size: 0.7rem;
+    font-weight: 600;
+    color: $text-color;
+    background-color: $background-color;
+    border: 1px solid $border-color;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 1rem;
+
+    i {
+        margin-right: 0.4rem;
+    }
+
+    @media (max-width: $medium) {
+        display: block;
+    }
+}
+
 .publications__layout {
     display: flex;
     gap: 2rem;
@@ -20,6 +42,11 @@
         width: 100%;
         position: static;
         max-height: none;
+        display: none;
+
+        &.is-open {
+            display: block;
+        }
     }
 }
 
